Fix z-index of the backcap panel

--- a/media/css/support-panel.css
+++ b/media/css/support-panel.css
@@ -45,7 +45,7 @@ a.trigger {
      display: none;
      background: #000000;
      height: auto;
-     z-index:2000;
+     z-index:10000;
  }
 
 .feedback-panel.left {
